syntax = "proto3";

package services.user.store.v1;

import "services/user/store/v1/user.proto";

option go_package = "user/store/v1";

service UserStoreService {
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}